--- a/core/templates/core/components/header.html
+++ b/core/templates/core/components/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 
-<header class="bg-white border-b border-gray-200 sticky top-0 z-40 shadow-sm" role="banner">
+<header id="kb-header" class="bg-white border-b border-gray-200 sticky top-0 z-40 shadow-sm" role="banner">
     <div class="w-full px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between h-16">
             {# Logo & Brand #}
